# cg-2026-winter-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
bots/: explorer.py  skeleton.py  wait.py
simulator/: ai-tool.py  analyse.py  display.py  generate.py  simulator.py
simulator/data/: maps.txt
tests/: conftest.py  test_ai_tool.py  test_analyse.py  test_display.py  test_simulator.py
